# exposure_timing

./: README.md
.github/workflows/: pyinstaller.yml
hardware/: README.md
hardware/3d_stand/: 3d_stand.FCStd  3d_stand.stl
hardware/board-v1/: BOM.csv  faceplate.kicad_prl  nexta.kicad_pcb  nexta.kicad_prl
hardware/firmware/NEXTA/: NEXTA.ino
hardware/nexta_case/: README.md  nexta_box_v6.FCStd  nexta_box_v6_face.stl  nexta_box_v6_gps_cover.stl  nexta_box_v6_lid.stl  nexta_box_v6_spacer.stl
hardware/pcb/: BOM.csv  faceplate.kicad_pcb  faceplate.kicad_pro  nexta.kicad_pcb  nexta.kicad_prl  nexta.kicad_pro  nexta.kicad_sch
hardware/standoffs/: faceplate_standoff_M3_8mm.FCStd  faceplate_standoff_M3_8mm.stl
nexta_analysis/: NACanvas.py  README.md  aruco_detect.py  debug_show.py  globber.py  led_selector.py  pyproject.toml  read_time.py  read_time_gui.py
nexta_html_decode_form/: index.html
