[tool.poetry]
name = "nexta-analysis"
version = "1.0.0"
description = ""
authors = ["Russell Valentine <russell.valentine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
astropy = "^6.0.0"
opencv-python = "^4.9.0.80"
pillow = "^10.2.0"
auto-stretch = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
