[tool.poetry]
name = "nexta-analysis"
version = "1.0.0"
description = ""
authors = ["Russell Valentine <russell.valentine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
astropy = "^6.0.0"
pillow = "^10.2.0"
auto-stretch = "^0.0.1"
sigfig = "^1.3.3"
opencv-python-headless = "^4.9.0.80"

[tool.poetry.group.pyinstaller]
optional = true

[tool.poetry.group.pyinstaller.dependencies]
pyinstaller = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
